# Autoit-Python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
docs/: .gitignore  Makefile  api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  migration_guide.rst  quickstart.rst
docs/_static/: custom.css
examples/: __init__.py
examples/autoit_originals/: window_automation.au3
examples/comparisons/: migration_analysis.md
examples/python_migrations/: pyautogui_demo.py  pyautogui_example.py  selenium_automation.py  web_automation.py  window_automation.py
tests/: __init__.py  conftest.py  test_automation.py  test_window_automation.py
